token swagger updated
